--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^7.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
